trueface react docs

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1>Trueface SDK and Components</h1>
 <ol>
     <li><a href="https://getchui.github.io/Trueface.ai_SDK/trueface-sdk/docs/index.html">Trueface SDK</a></li>
-    <li><a href="">Trueface React</a></li>
+    <li><a href="https://getchui.github.io/Trueface.ai_SDK/trueface-react/docs/index.html">Trueface React</a></li>
 </ol>
